# joern_mcp

./: .gitignore  CHANGELOG.md  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_e2e_tests.sh  run_integration_tests.sh  run_tests.sh
doc/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN.md  DEVELOPMENT_OVERVIEW.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_WEEK2-8.md  INTEGRATION_TESTING.md  JOERN_INTEGRATION.md  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  TASK_TRACKER.md  UPDATES.md  USER_GUIDE.md
docs/: API_REFERENCE.md  INSTALLATION.md  MCP_USAGE_GUIDE.md  SERVICE_API.md  USER_GUIDE.md
examples/: README.md  demo.py  mcp_client_example.py
examples/multi_file_project/: Makefile  README.md  app  auth.c  auth.h  database.c  database.h  main.c  network.c  network.h  utils.c  utils.h
examples/scripts/: README.md  analyze_all_vulnerabilities.py  analyze_buffer_overflow.py  analyze_command_injection.py  test_callgraph.py
examples/vulnerable_c/: vulnerable.c
scripts/: benchmark_performance.py  check_status.sh  cleanup_ports.py  monitor_joern.sh  quick_test.py  test_http_client.py  test_joern_server.py  verify_fix.sh
src/joern_mcp/: __init__.py  __main__.py  config.py  mcp_server.py  server.py
src/joern_mcp/joern/: __init__.py  executor.py  executor_optimized.py  http_client.py  manager.py  queries.py  server.py  templates.py
src/joern_mcp/models/: taint_rules.py
src/joern_mcp/prompts/: analysis_prompts.py
src/joern_mcp/resources/: project_resources.py
src/joern_mcp/services/: callgraph.py  dataflow.py  taint.py
src/joern_mcp/tools/: batch.py  callgraph.py  cfg.py  dataflow.py  export.py  performance.py  project.py  query.py  taint.py
src/joern_mcp/utils/: logger.py  performance.py  port_utils.py  project_utils.py  response_parser.py
tests/: conftest.py  test_config.py  test_main.py  test_mcp_server.py
tests/e2e/: __init__.py  conftest.py  test_helpers.py  test_mcp_tools_real.py  test_resources_prompts_e2e.py  test_tools_e2e.py  test_tools_e2e_fixed.py
tests/integration/: conftest.py  test_boundary_conditions.py  test_complex_project.py  test_error_handling.py  test_error_scenarios.py  test_http_client.py  test_performance.py  test_performance_features.py  test_server_lifecycle.py  test_server_lifecycle_enhanced.py  test_services_enhanced.py  test_tools_integration.py
tests/integration/test_data/complex_c/: main.c  network.c  network.h  utils.c  utils.h
tests/integration/test_data/sample_c/: vulnerable.c
tests/test_joern/: test_executor.py  test_executor_optimized.py  test_manager.py  test_server_mock.py  test_templates.py
tests/test_prompts/: test_analysis_prompts.py
tests/test_services/: test_callgraph.py  test_callgraph_extended.py  test_dataflow.py  test_dataflow_extended.py  test_taint.py  test_taint_extended.py
tests/test_tools/: test_batch.py  test_callgraph.py  test_cfg.py  test_dataflow.py  test_export.py  test_project.py  test_query.py  test_taint.py
tests/test_utils/: test_logger.py  test_performance.py  test_port_utils.py
