[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joern-mcp"
version = "0.1.0"
description = "Joern MCP Server - Code Analysis for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Joern MCP Team", email = "dev@example.com" }
]
keywords = [
    "joern",
    "code-analysis",
    "static-analysis",
    "mcp",
    "llm",
    "security",
    "vulnerability-detection",
    "dataflow",
    "taint-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "cachetools>=5.0.0",
    "orjson>=3.9.0",
    "aiofiles>=23.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "cpgqls-client>=0.0.9",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/joern_mcp"
Documentation = "https://joern-mcp.readthedocs.io"
Repository = "https://github.com/yourusername/joern_mcp"
Issues = "https://github.com/yourusername/joern_mcp/issues"
Changelog = "https://github.com/yourusername/joern_mcp/blob/main/CHANGELOG.md"

[project.scripts]
joern-mcp = "joern_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/joern_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=joern_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--timeout=120",  # 每个测试最多120秒
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_joern: marks tests that require Joern installation",
    "performance: marks tests as performance tests",
    "stress: marks tests as stress tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # 忽略CPGQLSClient内部的协程警告（库本身的问题）
    "ignore::RuntimeWarning:asyncio.base_events",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    # 忽略ResourceWarning（由CPGQLSClient引起）
    "ignore::ResourceWarning",
    # 忽略DeprecationWarning
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S"]

[tool.ruff.lint.isort]
known-first-party = ["joern_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "cachetools.*",
    "orjson.*",
]
ignore_missing_imports = true

